--- a/css/style.css
+++ b/css/style.css
@@ -1050,12 +1050,10 @@ h2 {
   color: #222222;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
   border-radius: 30%;
-  background: rgba(255,255,255,0.5);
+  background: rgba(170, 212, 229,0.2);
 }
 
 .htitle{
-	/*//line-height:56px;*/
-	/*padding-left:10%;*/
 	padding-bottom: 5px;
 	text-align: center;
 }
